fix cropped photo

--- a/css/alumni.css
+++ b/css/alumni.css
@@ -12,18 +12,18 @@
 }
 
 .jumbotron {
-  margin-bottom: 0;
-  width: 100%;
+    margin-bottom: 0;
+    width: 100%;
 }
 
 .bottomUp {
-  position: absolute;
-  bottom: 0;
-  padding-bottom: 20px;
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 20px;
 }
 
 .headerPad {
-  padding-top: 480px;
+    padding-top: 480px;
 }
 
 .service-name {
@@ -33,129 +33,129 @@
 }
 
 h1 {
-  font-family: "proxima-nova", sans-serif;
-  text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: 2px;
+    font-family: "proxima-nova", sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 2px;
 }
 
 #header1 {
-  position: absolute;
-  top: 10px;
-  background-image: url(../res/bg1.jpg);
-  background-position: center center;
-  background-size: cover;
-  height: 10px;
-  min-height: 480px;
-  transition: opacity 2s;
-  -webkit-transition: opacity 2s;
-  -webkit-animation: fading 12s infinite; /* Chrome, Safari, Opera */
-  animation: fading 12s infinite;
+    position: absolute;
+    top: 10px;
+    background-image: url(../res/bg1.jpg);
+    background-position: center center;
+    background-size: cover;
+    height: 10px;
+    min-height: 480px;
+    transition: opacity 2s;
+    -webkit-transition: opacity 2s;
+    -webkit-animation: fading 12s infinite; /* Chrome, Safari, Opera */
+    animation: fading 12s infinite;
 }
 
 @-webkit-keyframes fading {
-  0% {opacity: 1;}
-  37.5% {opacity: 1;}
-  50% {opacity: 0;}
-  87.5% {opacity: 0;}
-  100% {opacity: 1;}
+    0% {opacity: 1;}
+    37.5% {opacity: 1;}
+    50% {opacity: 0;}
+    87.5% {opacity: 0;}
+    100% {opacity: 1;}
 }
 
 @keyframes fading {
-  0% {opacity: 1;}
-  37.5% {opacity: 1;}
-  50% {opacity: 0;}
-  87.5% {opacity: 0;}
-  100% {opacity: 1;}
+    0% {opacity: 1;}
+    37.5% {opacity: 1;}
+    50% {opacity: 0;}
+    87.5% {opacity: 0;}
+    100% {opacity: 1;}
 }
 
 #header2 {
-  position: absolute;
-  top: 10px;
-  background-image: url(../res/bg2.jpg);
-  background-position: center center;
-  background-size: cover;
-  height: 10px;
-  min-height: 480px;
-  transition: opacity 2s;
-  -webkit-transition: opacity 2s;
-  -webkit-animation: fading2 12s infinite;
-  animation: fading2 12s infinite;
+    position: absolute;
+    top: 10px;
+    background-image: url(../res/bg2.jpg);
+    background-position: center center;
+    background-size: cover;
+    height: 10px;
+    min-height: 480px;
+    transition: opacity 2s;
+    -webkit-transition: opacity 2s;
+    -webkit-animation: fading2 12s infinite;
+    animation: fading2 12s infinite;
 }
 
 #header3 {
-  position: absolute;
-  top: 10px;
-  background-image: url(../res/bg3.jpg);
-  background-position: center center;
-  background-size: cover;
-  height: 10px;
-  min-height: 480px;
-  transition: opacity 2s;
-  -webkit-transition: opacity 2s;
-  -webkit-animation: fading2 12s infinite;
-  animation: fading2 12s infinite;
+    position: absolute;
+    top: 10px;
+    background-image: url(../res/bg3.jpg);
+    background-position: top center;
+    background-size: cover;
+    height: 10px;
+    min-height: 480px;
+    transition: opacity 2s;
+    -webkit-transition: opacity 2s;
+    -webkit-animation: fading2 12s infinite;
+    animation: fading2 12s infinite;
 }
 
 @-webkit-keyframes fading2 {
-  0% {opacity: 0;}
-  37.5% {opacity: 0;}
-  50% {opacity: 1;}
-  87.5% {opacity: 1;}
-  100% {opacity: 0;}
+    0% {opacity: 0;}
+    37.5% {opacity: 0;}
+    50% {opacity: 1;}
+    87.5% {opacity: 1;}
+    100% {opacity: 0;}
 }
 
 @keyframes fading2 {
-  0% {opacity: 0;}
-  37.5% {opacity: 0;}
-  50% {opacity: 1;}
-  87.5% {opacity: 1;}
-  100% {opacity: 0;}
+    0% {opacity: 0;}
+    37.5% {opacity: 0;}
+    50% {opacity: 1;}
+    87.5% {opacity: 1;}
+    100% {opacity: 0;}
 }
 
 footer .well {
-  padding:0.5em 1em;
+    padding:0.5em 1em;
 }
 
 .well {
-  border-radius: 0;
-  margin-bottom: 0;
+    border-radius: 0;
+    margin-bottom: 0;
 }
 
 header {
-  height: 10px;
-  min-height: 10px;
+    height: 10px;
+    min-height: 10px;
 }
 
 .lessRedBird {
-  background-color: #114079;
+    background-color: #114079;
 }
 
 .redBird {
-  background-color: #132E5F;
+    background-color: #132E5F;
 }
 
 .formNarrative {
-  font-weight: 300;
+    font-weight: 300;
 }
 
 .thanks {
-  margin: auto;
-  position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
-  width: 100%;
-  height: 12em;
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    width: 100%;
+    height: 12em;
 }
 
 .thanksNote {
-  padding: 1.5em 0;
+    padding: 1.5em 0;
 }
 
 dt {
-  margin-bottom: 0.5em;
-  margin-top: 1em;
+    margin-bottom: 0.5em;
+    margin-top: 1em;
 }
 
 dd {
-  padding-left: 1em;
+    padding-left: 1em;
 }
